--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -1,19 +1,26 @@
-{% extends 'todo/base.html' %}
+
+{% extends "todo/base.html" %}
 
 {% block content %}
-
-<h1>New ToDo list!</h1>
 <br>
-<h2>{{ user.username }} has * lists</h2>
 
-{% for todo in todolist %}
+ {% if user.is_authenticated %}
+ 	<p>
+ 		<b>{{ user.username}} has {% if todos.count > 0 %} {{ todos.count }} {% else %} no {% endif %} ToDo{{ todos.count|pluralize }}.</b>
+ 		<br>
 
-<h3>{{ todo.title }}</h3>
-<h5>{{ todo.memo }}</h5>
-<p>{{ todo.datecompleted }}</p>
-<p>{{ todo.important }}</p>
+ 	</p>
+ {% else %}
+ 
+ 	<div class="row justify-content-center mt-5">
+        <div class="col-md-7 text-center">
 
+                 <h1>Simply Your Todos. Woo!</h1>
+            <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>Todo Woo</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
+        <a role="button" class="btn btn-primary btn-lg" href="{% url 'signupuser' %}">Start</a>
+        </div>
+    </div>
 
-{% endfor %}
+ {% endif %}
 
 {% endblock %}
