--- a/todo/templates/todo/currenttodos.html
+++ b/todo/templates/todo/currenttodos.html
@@ -1,19 +1,31 @@
-{% extends 'todo/base.html' %}
+
+{% extends "todo/base.html" %}
 
 {% block content %}
-
-<h1>Current</h1>
-
-<ul>
-	{% for todo in todos %}
-	<li>
-		<a href="{% url 'viewtodo' todo.id %}">
-		{% if todo.important %}<b>{% endif %}
-		{{ todo.title }}{% if todo.important %}</b>{% endif %}
-		{% if todo.memo %} - {{ todo.memo }}{% endif %}
-	</a>
-	</li>
-	{% endfor %}
-</ul>
-
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-10">
+            {% if todos %}
+                 <h1>{{ todos.count }} Current Todo{{ todos.count|pluralize }}</h1>
+            {% else %}
+                           <h1>Current Todos</h1>
+            {% endif %}
+        </div>
+    </div>
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-10">
+        {% if todos %}
+            <div class="list-group list-group-flush">
+                {% for todo in todos %}
+                    <a href="{% url 'viewtodo' todo.id %}" class="list-group-item list-group-item-warning"{% if todo.important %} class="list-group-itemlist-group-item-warning" {% else %} style="background-color: #e3f2fd;" {% endif %}><b>{{ todo.title }}</b>{% if todo.memo %} - {{ todo.memo|truncatechars:30 }}{% endif %}</a>
+                {% endfor %}
+            </div>
+        {% else %}
+            <div class="text-center">
+                <h2>Looks like you don't have any todos! Nice work.</h2>
+            <br>
+            <a role="button" class="btn btn-primary" href="{% url 'createtodo' %}">New Todo</a>
+            </div>
+        {% endif %}
+        </div>
+    </div>
 {% endblock %}
