--- a/todo/templates/todo/base.html
+++ b/todo/templates/todo/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
     <link rel="icon" type="image/png"  href="{% static 'todo/logo.png' %}">
-    <title>Todo Woo</title>
+    <title>Todo ToDay</title>
 </head>
 <body>
 
@@ -19,7 +19,7 @@
 <div class="container">
     <a class="navbar-brand" href="{% url 'home' %}">
          <img src="{% static 'todo/logo.png' %}" width="30" height="30" class="d-inline-block align-top">
-        <span>Todo Woo</span>
+        <span>ToDo today</span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,32 +29,36 @@
         <ul class="navbar-nav mr-auto">
 
                 <li class="nav-item {{ current }}">
-                    <a class="nav-link" href="{% url 'currenttodos' %}">Current</a>
+                    <a class="nav-link" href="{% url 'currenttodos' %}">Текущие дела</a>
                 </li>
                 <li class="nav-item {{ completed }}">
-                    <a class="nav-link" href="{% url 'completedtodos' %}">Completed</a>
+                    <a class="nav-link" href="{% url 'completedtodos' %}">Завершенные</a>
                 </li>
-                <li class="nav-item {{ create }}">
+               <!-- Buttom create
+               <li class="nav-item {{ create }}">
                     <a class="nav-link" href="{% url 'createtodo' %}">Create</a>
-                </li>
+                </li> -->
 
         </ul>
     {% endif %}
     <ul class="navbar-nav ml-auto">
             {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Logout</a>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#">{{ user.username }}</a>
+                    </li>
+                    <a href="#" onclick="$('#signOutBtn').click()" class="nav-link">Выйти</a>
                     <form style='display: none;' method="POST" action="{% url 'logoutuser' %}">
                         {% csrf_token %}
-                        <button id="signOutBtn" type="submit">Logout</button>
+                        <button id="signOutBtn" type="submit"></button>
                     </form>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'signupuser' %}">Sign Up</a>
+                    <a class="nav-link" href="{% url 'signupuser' %}">Зарегистрироваться</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'loginuser' %}">Login</a>
+                    <a class="nav-link" href="{% url 'loginuser' %}">Вход</a>
                 </li>
             {% endif %}
         </ul>
