--- a/todo/templates/todo/completedtodos.html
+++ b/todo/templates/todo/completedtodos.html
@@ -4,15 +4,17 @@
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-10">
-            <h1>Completed Todos</h1>
+            <h1>Сделано</h1>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
         <div class="col-md-10">
             <div class="list-group">
                 {% for todo in todos %}
-                    <a href="{% url 'viewtodo' todo.id %}" class="list-group-item list-group-item-action{% if todo.important %} list-group-item-danger{% endif %}"><b>{{ todo.title }}</b> - Completed {{ todo.datecompleted|date:'M j Y H:i' }}</a>
+                    <a href="{% url 'viewtodo' todo.id %}" class="list-group-item list-group-item-action"{% if todo.important %} style="background-color: #fde3f2" {% else %} style="background-color: #e3f2fd" {% endif %}><b>{{ todo.title }}</b> - Завершено {{ todo.datecompleted|date:'j/m/Y H:i' }}</a>
                 {% endfor %}
+                <br>
+                <a role="button" class="btn btn-outline-success btn-lg btm-block" href="{% url 'createtodo' %}">Новое ToDo</a>
             </div>
         </div>
     </div>
