--- a/todo/templates/todo/createtodo.html
+++ b/todo/templates/todo/createtodo.html
@@ -4,7 +4,7 @@
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-            <h2>New Todo</h2>
+            <h2>Новое ToDo</h2>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -17,18 +17,18 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="title">Title</label>
+                    <label for="title">Дело</label>
                     <input type="text" name="title" class="form-control" id="title" required>
                 </div>
                 <div class="form-group">
-                    <label for="memo">Memo</label>
+                    <label for="memo">Пометки</label>
                     <textarea name="memo" class="form-control" id="memo" ></textarea>
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" name="important" class="form-check-input" id="important">
-                    <label class="form-check-label" for="important">Important</label>
+                    <label class="form-check-label" for="important">Важно</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">Сохранить</button>
             </form>
         </div>
     </div>
