--- a/todo/templates/todo/home.html
+++ b/todo/templates/todo/home.html
@@ -11,9 +11,9 @@
 <div class="row justify-content-center mt-5">
         <div class="col-md-7 text-center">
 
-                 <h1>Simply Your Todos. Woo!</h1>
-            <p>Life is fun. But life is also busy. There's a million different things you could be doing. But what matters is <u>what</u> you do. We created <b><i>Todo Woo</i></b> to help you make sense of all of your opportunities and live that life that matters most to you. Your new organized life awaits.</p>
-        <a role="button" class="btn btn-primary btn-lg" {% if user.is_authenticated %} href="{% url 'createtodo' %}" {% else %} href="{% url 'signupuser' %}" {% endif %}>Start</a>
+                 <h2>Привет! Я твой простой список To Do.</h2>
+            <p>Наша жизнь дает множество возможностей. Но важно что <u>именно</u> ты делаешь. Мы создали <b><i>ToDo ToDay</i></b> что бы помочь тебе сфокусироваться на важном. Составляй список дел и вперед к свершениям! =) </p>
+        <a role="button" class="btn btn-primary btn-lg" {% if user.is_authenticated %} href="{% url 'createtodo' %}" {% else %} href="{% url 'signupuser' %}" {% endif %}>Начать</a>
         </div>
     </div>
 
