--- a/todo/templates/todo/loginuser.html
+++ b/todo/templates/todo/loginuser.html
@@ -17,18 +17,18 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="username">Username</label>
+                    <label for="username">Имя</label>
                     <input type="text" name="username" class="form-control" id="username">
                 </div>
                 <div class="form-group">
-                    <label for="password">Password</label>
+                    <label for="password">Пароль</label>
                     <input type="password" name="password" class="form-control" id="password">
                 </div>
-                <button type="submit" class="btn btn-primary">Login</button>
+                <button type="submit" class="btn btn-primary">Войти</button>
             </form>
             <hr>
             <div class="text-center">
-                Need an account? <a href="{% url 'signupuser' %}">Sign Up here</a>
+                Еще не <a href="{% url 'signupuser' %}">зарегистрировались</a>?
             </div>
         </div>
     </div>
