--- a/todo/templates/todo/viewtodo.html
+++ b/todo/templates/todo/viewtodo.html
@@ -3,7 +3,12 @@
 {% block content %}
     <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-            <h2>New Todo</h2>
+            {% if todo.datecompleted %}
+            <h3>Завершенное дело</h3>
+            {% else %}
+            <h3>Изменить либо Завершить дело</h3>
+            {% endif %}
+            </h3>
         </div>
     </div>
     <div class="row justify-content-center mt-5">
@@ -16,31 +21,36 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="form-group">
-                    <label for="title">Title</label>
+                    <label for="title">Дело</label>
                     <input type="text" name="title" class="form-control" id="title" value="{{ todo.title }}" required>
                 </div>
                 <div class="form-group">
-                    <label for="memo">Memo</label>
+                    <label for="memo">Пометки</label>
                     <textarea name="memo" rows="5" class="form-control" id="memo" >{{ todo.memo }}</textarea>
                 </div>
                 <div class="form-group form-check">
                     <input type="checkbox" name="important" class="form-check-input" id="important" {% if todo.important %}checked{% endif %}>
-                    <label class="form-check-label" for="important">Important</label>
+                    <label class="form-check-label" for="important">Важно</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Save</button>
-                <button type="button" class="btn btn-success" onclick="$('#complete').click()">Complete</button>
-                <button type="button" class="btn btn-danger" onclick="$('#delete').click()">Delete</button>
+                {% if todo.datecompleted %}
+                    <a role="button" type="submit" class="btn btn-primary" href="{% url 'completedtodos' %}">Сохранить</a>
+                    <button type="button" class="btn btn-danger" onclick="$('#delete').click()">Удалить</button>
+                {% else %}
+                    <button type="submit" class="btn btn-primary">Сохранить</button>
+                    <button type="button" class="btn btn-success" onclick="$('#complete').click()">Сделано</button>
+                    <button type="button" class="btn btn-danger" onclick="$('#delete').click()">Удалить</button>
+                {% endif %}
             </form>
         </div>
     </div>
     {% if todo.datecompleted is None %}
         <form style='display: none;' method="POST" action="{% url 'completetodo' todo.id %}">
             {% csrf_token %}
-            <button id="complete" type="submit">Complete</button>
+            <button id="complete" type="submit">Сделано</button>
         </form>
     {% endif %}
     <form style='display: none;' method="POST" action="{% url 'deletetodo' todo.id %}">
         {% csrf_token %}
-        <button id="delete" type="submit">Delete</button>
+        <button id="delete" type="submit">Удалить</button>
     </form>
 {% endblock %}
